Certtool can generate a DANE RR entry.

--- a/NEWS
+++ b/NEWS
@@ -25,6 +25,8 @@ GNUTLS_NO_EXTENSIONS can be used to prevent that.
 ** libdane: Added. It is a library to provide DANE with DNSSEC certificate
 verification.
 
+** certtool: The --dane-rr option generates DANE Resource Records (RR).
+
 ** API and ABI modifications:
 gnutls_certificate_set_ocsp_status_request_function: Added
 gnutls_certificate_set_ocsp_status_request_file: Added
