--- a/NEWS
+++ b/NEWS
@@ -50,14 +50,15 @@ gnutls_pkcs11_obj_export2: Added
 gnutls_pkcs12_export2: Added
 gnutls_pubkey_import_openpgp_raw: Added
 gnutls_pubkey_import_x509_raw: Added
-dane_query_init: Added
-dane_query_deinit: Added
-dane_query_resolve_tlsa: Added
-dane_query_data: Added
+dane_state_init: Added
+dane_state_deinit: Added
+dane_query_tlsa: Added
 dane_query_status: Added
 dane_query_entries: Added
-dane_verify_crt: Added
+dane_query_data: Added
+dane_query_deinit: Added
 dane_verify_session_crt: Added
+dane_verify_crt: Added
 dane_strerror: Added
 
 
