--- a/NEWS
+++ b/NEWS
@@ -27,6 +27,9 @@ response corresponds to the given certificate.
 OCSP certificate status request extensions by default. The flag
 GNUTLS_NO_EXTENSIONS can be used to prevent that.
 
+** libgnutls: Compatibility code with RFC5081 was removed. The OpenPGP
+code now is RFC6091 compliant only.
+
 ** libgnutls-dane: Added. It is a library to provide DANE with DNSSEC 
 certificate verification.
 
@@ -35,6 +38,7 @@ certificate verification.
 ** certtool: The --dane-tlsa-rr option generates DANE TLSA Resource Records (RR).
 
 ** API and ABI modifications:
+gnutls_certificate_get_peers_subkey_id: Added
 gnutls_certificate_set_ocsp_status_request_function: Added
 gnutls_certificate_set_ocsp_status_request_file: Added
 gnutls_ocsp_status_request_enable_client: Added
