--- a/NEWS
+++ b/NEWS
@@ -4,10 +4,14 @@ See the end for copying conditions.
 
 * Version 3.1.4 (unreleased)
 
+** libgnutls: gnutls_certificate_verify_peers2() will set flags depending on
+the available revocation data validity.
+
 ** gnutls-cli: Added --local-dns option.
 
 ** API and ABI modifications:
-No changes since last version.
+GNUTLS_CERT_REVOCATION_DATA_TOO_OLD: Added.
+GNUTLS_CERT_REVOCATION_DATA_INVALID: Added.
 
 
 * Version 3.1.3 (released 2012-10-12)
