--- a/doc/cha-gtls-app.texi
+++ b/doc/cha-gtls-app.texi
@@ -1033,6 +1033,9 @@ causes interoperability problems, but is required for full protection.
 @item %VERIFY_ALLOW_SIGN_RSA_MD5 @tab
 will allow RSA-MD5 signatures in certificate chains.
 
+@item %VERIFY_DISABLE_CRL_CHECKS @tab
+will disable CRL or OCSP checks in the verification of the certificate chain.
+
 @item %VERIFY_ALLOW_X509_V1_CA_CRT @tab
 will allow V1 CAs in chains.
 
