--- a/NEWS
+++ b/NEWS
@@ -13,6 +13,8 @@ the available revocation data validity.
 
 ** danetool: Corrected bug that prevented loading PEM files.
 
+** libgnutls-dane: Added pkg-config file for the library.
+
 ** API and ABI modifications:
 gnutls_session_get_id2: Added
 GNUTLS_CERT_REVOCATION_DATA_TOO_OLD: Added.
