Added gnutls_certificate_update_verify_flags() to allow setting new flags without overriding any defaults.

--- a/NEWS
+++ b/NEWS
@@ -17,6 +17,7 @@ the available revocation data validity.
 
 ** API and ABI modifications:
 gnutls_session_get_id2: Added
+gnutls_certificate_update_verify_flags: Added
 GNUTLS_CERT_REVOCATION_DATA_TOO_OLD: Added.
 GNUTLS_CERT_REVOCATION_DATA_INVALID: Added.
 
