--- a/doc/cha-gtls-app.texi
+++ b/doc/cha-gtls-app.texi
@@ -494,23 +494,24 @@ Certificate verification is possible by loading the trusted
 authorities into the credentials structure by using
 the following functions, applicable to X.509 and OpenPGP certificates.
 
-@showfuncB{gnutls_certificate_set_x509_trust_file,gnutls_certificate_set_openpgp_keyring_file}
+@showfuncC{gnutls_certificate_set_x509_system_trust,gnutls_certificate_set_x509_trust_file,gnutls_certificate_set_openpgp_keyring_file}
 
 The peer's certificate is not automatically verified and one 
-should call @funcref{gnutls_certificate_verify_peers2}
-after a successful handshake to verify the certificate's signature.
-Alternative the verification can occur during the handshake
+must call @funcref{gnutls_certificate_verify_peers3}
+after a successful handshake to verify the certificate's signature and the owner 
+of the certificate.
+
+Alternatively the verification can occur during the handshake
 by using @funcref{gnutls_certificate_set_verify_function}.
 
-In order to report a detailed verification output, an alternative
-way has to be used. For that, one should call @funcref{gnutls_certificate_get_peers} 
+The functions above provide a brief verification output. If a
+detailed output is required one should call @funcref{gnutls_certificate_get_peers}
 to obtain the raw certificate of the peer and verify it using the
 functions discussed in @ref{X.509 certificates}.
 
-@showfuncdesc{gnutls_certificate_verify_peers2}
+@showfuncdesc{gnutls_certificate_verify_peers3}
 
 @showfuncdesc{gnutls_certificate_set_verify_function}
-
 
 
 @node SRP credentials
